<resources>
    <string name="app_name">COVID-19</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_0">0</string>
    <string name="today_cases">Today cases</string>
    <string name="india">India</string>
    <string name="world">World</string>
    <string name="corona_cases">Corona Cases</string>
    <string name="recovered">Recovered</string>
    <string name="date">Date</string>
    <string name="today">Today</string>
    <string name="cases">Cases</string>
    <string name="deaths">Deaths</string>
</resources>
